--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,14 @@ python:
   - "3.5"
   - "3.6"
 
-install: pip install -r requirements.txt
+install:
+  - pip install -r requirements.txt
+  - mkdir logs
+  - python unitime/manage.py makemigrations
+  - python unitime/manage.py migrate
 
-script: mkdir logs; python unitime/manage.py test
+script:
+  - python unitime/manage.py test
 
 branches:
   only:
