--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
   - "3.6"
 
 install:
-  - pip install -r requirements.txt
+  - pip install -r requirements_dev.txt
   - mkdir logs
   - python unitime/manage.py makemigrations
   - python unitime/manage.py migrate
