--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ python:
 
 install:
   - pip install -r requirements_dev.txt
+  - pip install -r requirements_prod.txt
   - mkdir logs
   - python unitime/manage.py makemigrations
   - python unitime/manage.py migrate
