--- a/ansible/roles/users/tasks/main.yml
+++ b/ansible/roles/users/tasks/main.yml
@@ -20,3 +20,34 @@
       system: no
       shell: /bin/bash
       state: present
+
+- name: Create SSH directory
+  file:
+      path: "{{ unix.home }}/.ssh"
+      owner: "{{ unix.username }}"
+      group: "{{ unix.username }}"
+      mode: "0500"
+      state: directory
+
+
+- name: Configure SSH private key
+  copy:
+      src: authorized_keys
+      dest: "{{ unix.home }}/.ssh/authorized_keys"
+      owner: "{{ unix.username }}"
+      group: "{{ unix.username }}"
+      mode: "0400"
+  register: result
+
+- name: Configure systemd permissions for {{ unix.unsername }}
+  lineinfile:
+    dest: /etc/sudoers
+    line: "{{ item }}"
+    state: present
+  with_items:  # This does not work
+    - "%{{ unix.username }} ALL=(ALL) NOPASSWD: /bin/systemctl enable unitime-celery.service"
+    - "%{{ unix.username }} ALL=(ALL) NOPASSWD: /bin/systemctl enable unitime.service"
+    - "%{{ unix.username }} ALL=(ALL) NOPASSWD: /bin/systemctl status unitime-celery.service"
+    - "%{{ unix.username }} ALL=(ALL) NOPASSWD: /bin/systemctl status unitime.service"
+    - "%{{ unix.username }} ALL=(ALL) NOPASSWD: /bin/systemctl restart unitime-celery.service"
+    - "%{{ unix.username }} ALL=(ALL) NOPASSWD: /bin/systemctl restart unitime.service"
