--- a/ansible/roles/nginx/tasks/main.yml
+++ b/ansible/roles/nginx/tasks/main.yml
@@ -11,3 +11,21 @@
 
 - name: Start Nginx
   service: name=nginx enabled=yes state=started
+
+
+- name: Disable Default site
+  file: path=/etc/nginx/sites-enabled/default state=absent
+  notify: Reload Nginx
+
+
+- name: Copy nginx unitime conf to sites-available
+  copy:
+      src: unitime
+      dest: /etc/nginx/sites-available/unitime
+
+
+- name: Link unitime to sites-available
+  file: src=/etc/nginx/sites-available/unitime
+        dest=/etc/nginx/sites-enabled/unitime
+        state=link
+  notify: Reload Nginx
