Entrypoint for docker removed.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,8 +34,7 @@ services:
       - celrabbit
       - celredis
       - celdb
-    entrypoint: ./entrypoint.sh
-    command: python3 manage.py runserver 0.0.0.0:8000
+    command: bash -c "python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
   celworker:
     build:
       context: .
