--- a/ansible/roles/base/tasks/apt.yml
+++ b/ansible/roles/base/tasks/apt.yml
@@ -12,11 +12,17 @@
   with_items:
     - debconf-utils
     - unattended-upgrades
+    - apt-listchanges
+    - bsd-mailx
 
-- name: Enable unattended upgrades
-  debconf: name=unattended-upgrades question=unattended-upgrades/enable_auto_updates vtype=boolean value=true
-  register: results
 
-- name: Reconfigure unattended upgrades
-  command: dpkg-reconfigure -f noninteractive unattended-upgrades
-  when: results | changed
+- name: Unattended updates config
+  copy:
+    src: 50unattended-upgrades
+    dest: /etc/apt/apt.conf.d/50unattended-upgrades
+
+
+- name: Auto upgrades
+  copy:
+    src: 20auto-upgrades
+    dest: /etc/apt/apt.conf.d/20auto-upgrades
