--- a/ansible/roles/base/tasks/time.yml
+++ b/ansible/roles/base/tasks/time.yml
@@ -7,12 +7,20 @@
   file: src=/usr/share/zoneinfo/Etc/UTC dest=/etc/timezone force=yes state=link
   register: result
 
+
 - name: Reconfigure tzdata
   command: dpkg-reconfigure -f noninterractive tzdata
   when: result | changed
 
+
 - name: Install NTP daemon
   apt: name=ntp state=present
 
+
 - name: Start NTP daemon
   service: name=ntp state=started
+
+
+- name: Set timezone
+  timezone:
+    name: "Europe/Stockholm"
