--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     # volumes:
     #   - ./pg-data:/var/lib/postgresql/data
   uniredis:
-    image: redis:2.8.19
+    image: redis
     hostname: uniredis
     container_name: uniredis
   unirabbit:
